@@ -3,23 +3,14 @@ package at.qe.skeleton.internal.ui.beans;
 import at.qe.skeleton.external.model.currentandforecast.CurrentAndForecastAnswerDTO;
 import at.qe.skeleton.external.model.currentandforecast.misc.DailyWeatherDTO;
 import at.qe.skeleton.external.model.currentandforecast.misc.HourlyWeatherDTO;
+import at.qe.skeleton.internal.helper.WarningHelper;
 import at.qe.skeleton.internal.model.Location;
 import at.qe.skeleton.internal.services.*;
 import at.qe.skeleton.internal.services.exceptions.FailedApiRequest;
 import at.qe.skeleton.internal.services.exceptions.GeocodingApiReturnedEmptyListException;
-import at.qe.skeleton.internal.ui.beans.SessionInfoBean;
-import at.qe.skeleton.internal.ui.controllers.IconController;
 import jakarta.annotation.PostConstruct;
 import jakarta.faces.application.FacesMessage;
-import jakarta.faces.context.FacesContext;
-import java.time.Instant;
-import java.time.LocalDateTime;
-import java.time.ZoneId;
-import java.time.ZoneOffset;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.ArrayList;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -42,8 +33,8 @@ public class WeatherBean {
   @Autowired private LocationService locationService;
   @Autowired private UserxService userxService;
   @Autowired private FavoriteService favoriteService;
-  @Autowired private IconController iconController;
   @Autowired private SessionInfoBean sessionInfoBean;
+  @Autowired private WarningHelper warningHelper;
 
   private static final Logger LOGGER = LoggerFactory.getLogger(WeatherBean.class);
 
@@ -61,49 +52,20 @@ public class WeatherBean {
     try {
       this.location = locationService.handleLocationSearch(locationSearchInput);
     } catch (FailedApiRequest e) {
-      FacesContext.getCurrentInstance()
-          .addMessage(
-              null,
-              new FacesMessage(
-                  FacesMessage.SEVERITY_ERROR,
-                  "There was an error in an api request: ",
-                  e.getMessage()));
+      warningHelper.addMessage(
+          "There was an error in an api request: " + e.getMessage(), FacesMessage.SEVERITY_ERROR);
       LOGGER.error(e.getMessage());
       return null;
     } catch (GeocodingApiReturnedEmptyListException e) {
-      FacesContext.getCurrentInstance()
-          .addMessage(
-              "weatherForm:locationSearch",
-              new FacesMessage(
-                  FacesMessage.SEVERITY_INFO,
-                  "",
-                  "Sorry, we couldn't find a location with the name: %s"
-                      .formatted(locationSearchInput)));
+      warningHelper.addMessage(
+          "Sorry, we couldn't find a location with the name: %s".formatted(locationSearchInput),
+          FacesMessage.SEVERITY_INFO);
       return null;
     }
     this.weatherDTO =
         currentAndForecastAnswerService.deserializeDTO(location.getWeather().getWeatherData());
     return "/weather_view.xhtml?faces-redirect=true";
   }
-
-  // TODO: refactor - for inspiration look at favorite-overview
-  public String getIcon() {
-    String iconId = this.weatherDTO.currentWeather().weather().icon();
-    return iconController.getIcon(iconId);
-  }
-
-  // todo: think about how to display location (with state or without? what about null values?)
-  //
-  //  public String getLocationLabel() {
-  //    if (location.getState() == null) {
-  //      return String.format("%s, %s", location.getCity(), location.getCountry());
-  //    }
-  //    if (location.getCountry() == null) {
-  //      return String.format("%s, %s", location.getCountry(), location.getState());
-  //    }
-  //    return String.format(
-  //            "%s, %s, %s", location.getCity(), location.getCountry(), location.getState());
-  //  }
 
   /** Toggles the favorite status for the current location. */
   public void toggleFavorite() {
@@ -135,7 +97,7 @@ public class WeatherBean {
   public List<DailyWeatherDTO> getDailyWeatherEntries() {
     return weatherDTO.dailyWeather().stream()
         .limit((sessionInfoBean.isUserPremium() ? 9 : 4))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   /**
@@ -148,43 +110,7 @@ public class WeatherBean {
   public List<HourlyWeatherDTO> getHourlyWeatherEntries() {
     return weatherDTO.hourlyWeather().stream()
         .limit((sessionInfoBean.isUserPremium() ? 49 : 25))
-        .collect(Collectors.toList());
-  }
-
-  /**
-   * Formats an instant timestamp to a date-time string using a given specified format. Used to
-   * convert multiple occurrences of timestamps (Type Instant) in the weather details table to the
-   * desired formats.
-   *
-   * @param timezone String of the timezone.
-   * @param timestamp Instant timestamp.
-   * @param format Desired date-time format so e.g. "HH:mm" or "dd.MM.yyyy - HH:mm".
-   * @return A formatted date-time string.
-   */
-  public String formatInstantToDateTime(String timezone, Instant timestamp, String format) {
-    ZoneId zoneId = ZoneId.of(timezone);
-    LocalDateTime localDateTime = LocalDateTime.ofInstant(timestamp, zoneId);
-    DateTimeFormatter formatter = DateTimeFormatter.ofPattern(format);
-    return localDateTime.format(formatter);
-  }
-
-  /**
-   * Converts a direction in metrological degrees to a cardinal direction string.
-   *
-   * @param degrees Direction in metrological degrees, from 0 to 360.
-   * @return a string for the cardinal direction
-   */
-  public String degreesToCardinal(double degrees) {
-    String[] directions = {
-      "N", "NNE", "NE", "ENE", "E", "ESE", "SE", "SSE", "S", "SSW", "SW", "WSW", "W", "WNW", "NW",
-      "NNW"
-    };
-    int dir = (int) (((degrees + 11.25) % 360) / 22.5);
-    return directions[dir];
-  }
-
-  public Long msToKmh(Double mps) {
-    return Math.round(mps * 3.6);
+        .toList();
   }
 
   public String getLocationSearchInput() {
